--- a/stylesheets/lenzo.css
+++ b/stylesheets/lenzo.css
@@ -6,9 +6,11 @@ a, button, textarea { outline: none; }
 
 img { border: none; }
 
-button, input, select, textarea { margin: 0; }
+button, input, select, textarea { margin: 0; font-family: inherit; }
 
 input::-moz-focus-inner, button::-moz-focus-inner { border: 0; padding: 0; }
+
+label { cursor: pointer; }
 
 /*.fss{font-size:  9px}
 .fsm{font-size:  11px}
@@ -29,7 +31,7 @@ input::-moz-focus-inner, button::-moz-focus-inner { border: 0; padding: 0; }
 .grid { word-spacing: -0.279em; }
 
 /* reset letter-spacing */
-.btn, .i, .unit, .unit_txt { letter-spacing: normal; word-spacing: normal; }
+.btn, .i, .unit, .unit_txt, legend { letter-spacing: normal; word-spacing: normal; }
 
 /* inline-block */
 .btn, .btn_wrap, .btn_group, .i, .unit, .unit_txt, .item { display: -moz-inline-stack; display: inline-block; vertical-align: middle; zoom: 1; /*    *vertical-align: auto;*/ *display: inline; }
@@ -88,7 +90,7 @@ input::-moz-focus-inner, button::-moz-focus-inner { border: 0; padding: 0; }
 .item_body { display: table; zoom: 1; }
 
 /* thanks to http://stackoverflow.com/questions/4771304/justify-the-last-line-of-a-div */
-.grid { text-align: justify; text-align-last: justify; text-justify: distribute; width: 100%; margin-left: 0; margin-right: 0; padding-right: 0; padding-left: 0; }
+.grid { text-align: justify; /*  text-align-last:justify;*/ /*http://www.w3.org/TR/2010/WD-css3-text-20101005/#text-align-last*/ text-justify: distribute-all-lines; width: 100%; margin-left: 0; margin-right: 0; padding-right: 0; padding-left: 0; }
 
 .grid:after { content: " ____________________________________________________________________________________________________________________"; line-height: 0; visibility: hidden; }
 
@@ -208,6 +210,21 @@ input::-moz-focus-inner, button::-moz-focus-inner { border: 0; padding: 0; }
 
 /* icons */
 .i { background-position: left top; background-repeat: no-repeat; min-width: 12px; min-height: 12px; margin-right: 5px; margin-top: -2px; }
+
+/* ========= */
+/* = FORMS = */
+/* ========= */
+.dft_form, .dft_form fieldset { margin: 0; padding: 0; display: block; }
+
+.dft_form fieldset { border: 1px solid #444444; padding: 10px 0; }
+
+.field { border: 1px solid #666; background-color: #DDD; display: block; padding: 0 .5em; line-height: normal; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -moz-box-shadow: 0px 0px 4px #555 inset; -webkit-box-shadow: 0px 0px 4px #555 inset; box-shadow: 0px 0px 4px #555 inset; }
+
+.field input, .field textarea { margin: 0; padding: .4em 0; width: 100%; border: none; font-size: 1em; -webkit-appearance: none; resize: none; color: #666; background: transparent; }
+
+.field input:focus, .field textarea:focus { color: #333; }
+
+.dft_form label { font-weight: bold; display: block; padding-bottom: .4em; padding: 0 .5em .4em; text-shadow: 1px 1px 0px #000; }
 
 /* button text format and style */
 .btn { text-shadow: 1px 1px 0px #FFF; color: #666666; }
