--- a/stylesheets/lenzo.css
+++ b/stylesheets/lenzo.css
@@ -34,13 +34,15 @@ label { cursor: pointer; }
 .btn, .i, .unit, .unit_txt, legend { letter-spacing: normal; word-spacing: normal; }
 
 /* inline-block */
-.btn, .btn_wrap, .btn_group, .i, .unit, .unit_txt, .item { display: -moz-inline-stack; display: inline-block; vertical-align: middle; zoom: 1; /*    *vertical-align: auto;*/ *display: inline; }
+.btn, .btn_wrap, .btn_group, .i, .unit, .unit_txt, .item { display: -moz-inline-stack; display: inline-block; vertical-align: middle; zoom: 1; /*    *vertical-align: auto;*/ *display: inline; -ms-box-sizing: border-box; /*  -ms-box-sizing: content-box;*/ }
 
 /* ========= */
 /* = LAYOUT = */
 /* ========= */
 /* inspired in: https://github.com/stubbornella/oocss */
 .unit, .unit_txt { *margin-left: -0.04em; /* IE margin hack */ vertical-align: top; }
+
+.unit .unit, .unit_txt .unit_txt .unit .unit_txt, .unit_txt .unit { *margin-left: 0; }
 
 /* IE9 */
 @media all and (min-width:0) { /*  .unit, .unit_txt { margin-left:-0.01em \0/ ; }*/ }
@@ -92,7 +94,7 @@ label { cursor: pointer; }
 /* thanks to http://stackoverflow.com/questions/4771304/justify-the-last-line-of-a-div */
 .grid { text-align: justify; /*  text-align-last:justify;*/ /*http://www.w3.org/TR/2010/WD-css3-text-20101005/#text-align-last*/ text-justify: distribute-all-lines; width: 100%; margin-left: 0; margin-right: 0; padding-right: 0; padding-left: 0; }
 
-.grid:after { content: " ____________________________________________________________________________________________________________________"; line-height: 0; visibility: hidden; }
+.grid:after { content: '<span>&nbsp;</span>'; font-size: 1px; word-spacing: 100%; display: -moz-inline-stack; display: inline-block; width: 100%; visibility: hidden; }
 
 .grid > * { text-align: left; }
 
@@ -194,7 +196,7 @@ label { cursor: pointer; }
 .btn_wrap, .btn_group { margin-right: .4em; }
 
 /* button text format and style */
-.btn { font-family: Arial, sans-serif; font-weight: bold; font-size: .75em; text-decoration: none; cursor: pointer; padding: .5em .9em; -webkit-appearance: none; }
+.btn { font-family: Arial, sans-serif; font-weight: bold; font-size: .75em; text-decoration: none; cursor: pointer; padding: .4em .9em; -webkit-appearance: none; font-size: .8em; /*required for IE8*/ }
 
 .grid .btn { text-align: center; }
 
@@ -218,19 +220,23 @@ label { cursor: pointer; }
 
 .dft_form fieldset { border: 1px solid #444444; padding: 10px 0; }
 
-.field { border: 1px solid #666; background-color: #DDD; display: block; padding: 0 .5em; line-height: normal; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -moz-box-shadow: 0px 0px 4px #555 inset; -webkit-box-shadow: 0px 0px 4px #555 inset; box-shadow: 0px 0px 4px #555 inset; }
+.field { border: 1px solid #666; background: #ffffff; /* Old browsers */ background: -moz-linear-gradient(top, white 0%, #f7f7f7 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #f7f7f7)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, white 0%, #f7f7f7 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, white 0%, #f7f7f7 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, white 0%, #f7f7f7 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f7f7f7',GradientType=0 ); /* IE6-9 */ background: linear-gradient(top, #ffffff 0%, #f7f7f7 100%); /* W3C */ display: block; line-height: normal; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; -moz-box-shadow: 1px 1px 0 #CCC inset; -webkit-box-shadow: 1px 1px 0 #CCC inset; box-shadow: 1px 1px 0 #CCC inset; }
 
-.field input, .field textarea { margin: 0; padding: .4em 0; width: 100%; border: none; font-size: 1em; -webkit-appearance: none; resize: none; color: #666; background: transparent; }
+.field input, .field textarea { margin: 0; padding: .45em 0 .4em; width: 100%; border: none; -webkit-appearance: none; resize: none; color: #999; background: transparent; }
 
 .field input:focus, .field textarea:focus { color: #333; }
 
-.dft_form label { font-weight: bold; display: block; padding-bottom: .4em; padding: 0 .5em .4em; text-shadow: 1px 1px 0px #000; }
+.field, .field input, .field textarea, label { font-size: .9em; }
+
+.field, .dft_form label { padding: 0 .5em; }
+
+.dft_form label { font-weight: bold; display: block; padding-bottom: .4em; text-shadow: 1px 1px 0px #000; }
 
 /* button text format and style */
 .btn { text-shadow: 1px 1px 0px #FFF; color: #666666; }
 
 /* hovered color */
-.btn:hover, .btn_h, .btn_pos_h, .btn_neg_h { color: #FFF; text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3); }
+.btn:hover, .btn:active, .btn_h, .btn_pos_h, .btn_neg_h { color: #FFF; text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3); }
 
 /* button border style */
 .btn, .btn_group { border-color: #999999; }
@@ -244,15 +250,19 @@ label { cursor: pointer; }
 .btn_group .btn, .btn_group .btn:hover, .btn_group .btn_h, .btn_group .btn_h:hover, .btn_group .btn_pos:hover, .btn_group .btn_pos_h, .btn_group .btn_pos_h:hover, .btn_group .btn_neg:hover, .btn_group .btn_neg_h, .btn_group .btn_neg_h:hover { border-left-color: #999999; }
 
 /* button backgrounds */
-.btn, .btn_h { background: #e7e7e7; /* Old browsers */ background: -moz-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e7e7e7), color-stop(100%, #cccccc)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e7e7e7', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */ background: linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* W3C */ }
+.btn, .btn_h { background: #e7e7e7; /* Old browsers */ background: -moz-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e7e7e7), color-stop(100%, #cccccc)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#e7e7e7', endColorstr='#cccccc' ); /* IE6-9 */ background: linear-gradient(top, #e7e7e7 0%, #cccccc 100%); /* W3C */ }
 
 .btn:hover, .btn_selected, .btn_h, .btn_h:hover { background: #75a9e2; /* Old browsers */ background: -moz-linear-gradient(top, #75a9e2 0%, #388ad4 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #75a9e2), color-stop(100%, #388ad4)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #75a9e2 0%, #388ad4 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #75a9e2 0%, #388ad4 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, #75a9e2 0%, #388ad4 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#75a9e2', endColorstr='#388ad4',GradientType=0 ); /* IE6-9 */ background: linear-gradient(top, #75a9e2 0%, #388ad4 100%); /* W3C */ }
 
 .btn:active, .btn_h:active { background: #388ad4; /* Old browsers */ background: -moz-linear-gradient(top, #388ad4 0%, #75a9e2 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #388ad4), color-stop(100%, #75a9e2)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #388ad4 0%, #75a9e2 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #388ad4 0%, #75a9e2 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, #388ad4 0%, #75a9e2 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#388ad4', endColorstr='#75a9e2',GradientType=0 ); /* IE6-9 */ background: linear-gradient(top, #388ad4 0%, #75a9e2 100%); /* W3C */ }
 
+.btn_pos { color: #4E901A; }
+
 .btn_pos:hover, .btn_pos_h, .btn_pos_h:hover { background: #acda6b; /* Old browsers */ background: -moz-linear-gradient(top, #acda6b 0%, #7fb82d 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #acda6b), color-stop(100%, #7fb82d)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #acda6b 0%, #7fb82d 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #acda6b 0%, #7fb82d 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, #acda6b 0%, #7fb82d 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#acda6b', endColorstr='#7fb82d',GradientType=0 ); /* IE6-9 */ background: linear-gradient(top, #acda6b 0%, #7fb82d 100%); /* W3C */ }
 
 .btn_pos:active, .btn_pos_h:active { background: #7fb82d; /* Old browsers */ background: -moz-linear-gradient(top, #7fb82d 0%, #acda6b 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7fb82d), color-stop(100%, #acda6b)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #7fb82d 0%, #acda6b 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #7fb82d 0%, #acda6b 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, #7fb82d 0%, #acda6b 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7fb82d', endColorstr='#acda6b',GradientType=0 ); /* IE6-9 */ background: linear-gradient(top, #7fb82d 0%, #acda6b 100%); /* W3C */ }
+
+.btn_neg { color: #b8472d; }
 
 .btn_neg:hover, .btn_neg_h, .btn_neg_h:hover { background: #da806b; /* Old browsers */ background: -moz-linear-gradient(top, #da806b 0%, #b8472d 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #da806b), color-stop(100%, #b8472d)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #da806b 0%, #b8472d 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #da806b 0%, #b8472d 100%); /* Opera11.10+ */ background: -ms-linear-gradient(top, #da806b 0%, #b8472d 100%); /* IE10+ */ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#da806b', endColorstr='#b8472d',GradientType=0 ); /* IE6-9 */ background: linear-gradient(top, #da806b 0%, #b8472d 100%); /* W3C */ }
 
